--- a/rent.html
+++ b/rent.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Login</title>
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <form action="/rent" method="POST">
-        <input type = "text" id ="address"  name = "address"/>
-        <input type = "submit" name = "Submit"/>
-    </form>
+    <h1>Hey <script>var addr = "<%= addr %>"</script>/h1>
 </body>
 </html>
